@@ -1,6 +1,5 @@
 # Generated by roxygen2 (4.1.1): do not edit by hand
 
-export(parse_r_agent)
 export(read_aws)
 export(read_clf)
 export(read_combined)
@@ -9,6 +8,4 @@ export(split_clf)
 export(split_squid)
 import(readr)
 importFrom(Rcpp,sourceCpp)
-importFrom(stringi,stri_extract_first)
-importFrom(urltools,url_decode)
 useDynLib(webtools)
